# rolepass

./: .dockerignore  Cargo.toml  Dockerfile  dist-workspace.toml  readme.md
.github/workflows/: ci.yml  publish-r2.yml  release.yml
schemas/: accounts.schema.json  role.schema.json
src/: main.rs
src/aws/: iam.rs  mod.rs  policy.rs  sts.rs  tagging.rs
src/commands/: apply.rs  init.rs  mod.rs  plan.rs  preview.rs  validate.rs
src/config/: accounts.rs  mod.rs  role.rs  validation.rs
