[package]
name = "rolepass"
version = "0.1.0"
edition = "2024"

[dependencies]
# runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# commands
clap = { version = "4", features = ["derive", "env"] }

# data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jsonschema = "0.42"

# AWS
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-sts = "1.99.0"
aws-sdk-iam = "1.105.0"

# utils
urlencoding = "2"
owo-colors = { version = "4", features = ["supports-colors"] }

[dev-dependencies]
tempfile = "3"
