[package]
name = "rolepass"
version = "0.1.0"
edition = "2024"
description = "Manage AWS IAM roles for CI/CD pipelines across multiple accounts using OIDC federation"
license = "MIT"
repository = "https://github.com/rolepass/rolepass"
homepage = "https://rolepass.dev"

[dependencies]
# runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Error handling
anyhow = "1"

# commands
clap = { version = "4", features = ["derive", "env"] }

# data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
jsonschema = "0.42"

# AWS
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-sts = "1.99.0"
aws-sdk-iam = "1.105.0"
aws-sdk-resourcegroupstagging = "1.91.0"

# utils
urlencoding = "2"
owo-colors = { version = "4", features = ["supports-colors"] }

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
